--- a/css/mobil.css
+++ b/css/mobil.css
@@ -1,6 +1,6 @@
 body { 
-  margin: 0px; 
-  padding: 0px; 
+  margin: 0;
+  padding: 0;
   font-family: "Gardens", sans-serif; 
   font-size: 14px;
   color: #fff;
@@ -28,7 +28,7 @@ html {
   height: 100%; 
   -webkit-text-size-adjust: none; 
   -ms-text-size-adjust: none; 
-  overflow: hidden;
+  overflow-x: hidden;
 }
 input, textarea { 
   color: #333; 
@@ -51,7 +51,7 @@ a {
 a, span, div, button { 
   outline: none !important; 
 }
-input[type=submit], input[type=button], button { 
+input[type=submit]input[type=button], button {
   -webkit-appearance: none; 
   outline: none; 
 }
@@ -60,8 +60,8 @@ li {
 }
 *:before, *:after, form, div, p, h1, h2, h3, h4, h5, ul, li, a { 
   box-sizing: border-box; 
-  padding: 0px; 
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 /* loader */
@@ -75,8 +75,7 @@ li {
   position: fixed; 
   left: 50%; 
   top: 50%; 
-  margin-left: -20px; 
-  margin-left: -20px; 
+  margin-left: -20px;
   display: none; 
 }
 .main-wrapper {
@@ -132,7 +131,7 @@ li {
 	-webkit-box-pack: justify;
 	-webkit-justify-content: space-between;
 	-ms-flex-pack: justify;
-	justify-content: space-between;visibility: 
+	justify-content: space-between;
 }
 .menu-item {
 	width: 50%;
@@ -164,8 +163,7 @@ section { height: 100%; }
 	text-align: center; 
 	display: -webkit-box; 
 	display: -ms-flexbox;
-  display: flex; 
-  -ms-flex-pack: distribute; 
+  display: flex;
   justify-content: space-around; 
   -webkit-box-orient: vertical; 
   -webkit-box-direction: normal; 
@@ -301,49 +299,41 @@ section { height: 100%; }
 
 .tab.anim .service1:before, .tab.anim .service2:before,
 .tab.anim .service3:before, .tab.anim .service4:before,
-.tab.anim .service5:before {
-	content: 'от 100 USD';
+.tab.anim .service5:before, .tab.anim .service6:before {
 	position: absolute;
 	right: -120px;
 	height: 40px;
 	padding: 15px 0 0 25px;
 	background: url(../img/line.png) no-repeat left 0;
 	background-size: 29px 29px;
+	-webkit-animation: move-price .25s linear .9s;
+	animation: move-price .25s linear .9s;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
 }
 .tab.anim .service1:before {
+	content: 'от 14 дней';
 	bottom: 0;
-	-webkit-animation: move-price .25s linear .9s;
-	        animation: move-price .25s linear .9s;
-	-webkit-animation-fill-mode: both;
-	        animation-fill-mode: both;
+
 }	
 .tab.anim .service2:before {
+	content: 'от 20 дней';
 	bottom: 10px;
-	-webkit-animation: move-price .25s linear .9s;
-	        animation: move-price .25s linear .9s;
-	-webkit-animation-fill-mode: both;
-	        animation-fill-mode: both;
+
 }
 .tab.anim .service3:before {
+	content: 'от 30 дней';
 	bottom: 20px;
-	-webkit-animation: move-price .25s linear .9s;
-	        animation: move-price .25s linear .9s;
-	-webkit-animation-fill-mode: both;
-	        animation-fill-mode: both;
+
 }
 .tab.anim .service4:before {
+	content: 'от 60 дней';
 	bottom: 30px;
-	-webkit-animation: move-price .25s linear .9s;
-	        animation: move-price .25s linear .9s;
-	-webkit-animation-fill-mode: both;
-	        animation-fill-mode: both;
+
 }
 .tab.anim .service5:before {
+	content: 'от 90 дней';
 	bottom: 5px;
-	-webkit-animation: move-price .25s linear .9s;
-	        animation: move-price .25s linear .9s;
-	-webkit-animation-fill-mode: both;
-	        animation-fill-mode: both;
 }
 .service1:after {
 	content: '';
@@ -373,6 +363,7 @@ section { height: 100%; }
 	-webkit-animation-fill-mode: both;
 	        animation-fill-mode: both;
 }
+
 @-webkit-keyframes move-service3 {
 	from { bottom: 0; }
 	to { bottom: -225px; }
@@ -391,6 +382,7 @@ section { height: 100%; }
 	-webkit-animation-fill-mode: both;
 	        animation-fill-mode: both;
 }
+
 @-webkit-keyframes move-service4 {
 	from { bottom: 0; }
 	to { bottom: -305px; }
@@ -407,6 +399,7 @@ section { height: 100%; }
 	-webkit-animation-fill-mode: both;
 	        animation-fill-mode: both;
 }
+
 @-webkit-keyframes move-service5 {
 	from { bottom: 0; }
 	to { bottom: -350px; }
@@ -422,6 +415,25 @@ section { height: 100%; }
 	padding: 0;
 	-webkit-animation: move-service5 .9s linear;
 	        animation: move-service5 .9s linear;
+	-webkit-animation-fill-mode: both;
+	        animation-fill-mode: both;
+}
+
+@-webkit-keyframes move-service6 {
+	from { bottom: 0; }
+	to { bottom: -395px; }
+}
+@keyframes move-service6 {
+	from { bottom: 0; }
+	to { bottom: -395px; }
+}
+.tab.anim .service6 {
+	z-index: 1;
+	bottom: -395px;
+	height: 30px;
+	padding: 0;
+	-webkit-animation: move-service6 1s linear;
+	        animation: move-service6 1s linear;
 	-webkit-animation-fill-mode: both;
 	        animation-fill-mode: both;
 }
@@ -442,7 +454,6 @@ section { height: 100%; }
 	    -ms-flex-direction: column;
 	        flex-direction: column;
 	-webkit-justify-content: space-around;
-	    -ms-flex-pack: distribute;
 	        justify-content: space-around;
 }
 .contacts-background,
@@ -578,11 +589,6 @@ section { height: 100%; }
 	top: -5px;
 	left: 225px;
 }
-
-
-
-
-
 
 /*/////////////////////////Presentation\\\\\\\\\\\\\\\\\\\\\\\\\\*/
 #tab3 {
@@ -1192,9 +1198,7 @@ section { height: 100%; }
 	.anim.section .portfolio-item-four { top: 283%; }
 	.portfolio-img { width: 80%; padding: 0 13%; }
 	.anim2.section .portfolio-item-one { position: absolute; top: 7%; -webkit-animation: portfolio-down .5s linear 1s, portfolio-opacity-down .5s linear 1s;
-	         animation: portfolio-down .5s linear 1s, portfolio-opacity-down .5s linear 1s; -webkit-animation-fill-mode: both, botn; animation-fill-mode: both, botn; }
-	/*.anim2.section .portfolio-item-two { animation: none; }
-	.anim2.section .portfolio-item-three { animation: none; }*/
+	         animation: portfolio-down .5s linear 1s, portfolio-opacity-down .5s linear 1s; -webkit-animation-fill-mode: both; animation-fill-mode: both; }
 	.how-work-item { width: auto; }
 	.main-screen { height: 100%; }
 	.phone-icon { width: 20px; padding: 0; }
